--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@
             <div class="date">28 Jun 2020</div>
           </div>
           <div class="share-button">
-            <img src="./images/icon-share.svg" alt="" />
+            <img
+              class="card-share-icon"
+              src="./images/icon-share.svg"
+              alt="Share icon"
+            />
+          </div>
+        </div>
+        <div class="share-panel-mobile">
+          <div>SHARE</div>
+          <img src="./images/icon-facebook.svg" alt="Facebook icon" />
+          <img src="./images/icon-twitter.svg" alt="Twitter Icon" />
+          <img src="./images/icon-pinterest.svg" alt="Pintrest Icon" />
+          <div class="panel-share-icon">
+            <img src="./images/icon-share.svg" alt="Share icon" />
           </div>
         </div>
       </div>
@@ -48,5 +61,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
