style: transition and show/hide added to share panel

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="name">Michelle Appleton</div>
             <div class="date">28 Jun 2020</div>
           </div>
-          <div class="share-button">
+          <div class="share-button" id="show-share-panel">
             <img
               class="card-share-icon"
               src="./images/icon-share.svg"
@@ -43,12 +43,12 @@
             />
           </div>
         </div>
-        <div class="share-panel-mobile">
+        <div class="share-panel-mobile" id="share-panel-mobile">
           <div>SHARE</div>
           <img src="./images/icon-facebook.svg" alt="Facebook icon" />
           <img src="./images/icon-twitter.svg" alt="Twitter Icon" />
           <img src="./images/icon-pinterest.svg" alt="Pintrest Icon" />
-          <div class="panel-share-icon">
+          <div class="panel-share-icon" id="hide-share-panel">
             <img src="./images/icon-share.svg" alt="Share icon" />
           </div>
         </div>
