style: working on desktop share

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
             <div class="date">28 Jun 2020</div>
           </div>
           <div class="share-button" id="show-share-panel">
+            <div class="share-panel-desktop" id="share-panel-desktop">
+              <div>SHARE</div>
+              <img src="./images/icon-facebook.svg" alt="Facebook icon" />
+              <img src="./images/icon-twitter.svg" alt="Twitter Icon" />
+              <img src="./images/icon-pinterest.svg" alt="Pintrest Icon" />
+            </div>
             <img
               class="card-share-icon"
               src="./images/icon-share.svg"
