style: share button colour fix

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <img src="./images/icon-pinterest.svg" alt="Pintrest Icon" />
             </div>
             <img
-              class="card-share-icon"
+              id="card-share-icon"
               src="./images/icon-share.svg"
               alt="Share icon"
             />
