--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/TheThomasY">Tom Young</a>.
     </div>
     <script src="./scripts/script.js"></script>
   </body>
